<resources>
    <string name="app_name">Frizer</string>
    <string name="title_activity_about">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="frizersko_berberska_radnja_ben_po_ela_je_sa_radom_1998_godine_u_pljevljima_umjetnost_je_ovjekov_izraz_u_ivanja_u_radu_rekao_je_svojevremeno_henri_kisind_er_a_tu_misao_potvr_uje_i_samouki_pljevaljski_frizer_bensad_bambur_koji_vi_e_od_20_godina_u_kosu_svojih_mu_terija_unosi_ivot_na_jedan_druga_iji_na_in_crtaju_i_im_nakosi_sve_to_po_ele_popularne_tetova_e_u_kosi_frizer_ben_kakav_je_ve_nadimak_zaka_io_od_svojih_pljevljaka_radi_povremeno_isklju_ivo_na_zahtjev_mu_terije_i_naj_e_e_besplatno_kao_jedinu_prepreku_u_crtanju_u_kosi_ben_navodi_vrijeme_jer_za_jednu_malu_sli_icu_treba_izdvojiti_bar_pola_sata_ipak_ni_to_ga_ne_spre_ava_da_o_ivi_kosu_crtaju_i_raznorazne_simbole_imena_pa_ak_i_portrete">Frizersko-berberska radnja “BEN” počela je sa radom 1998. godine u Pljevljima. Umjetnost je čovjekov izraz uživanja u radu, rekao je svojevremeno Henri Kisindžer, a tu misao potvrđuje i samouki pljevaljski frizer Bensad Bambur koji više od 20 godina u kosu svojih mušterija unosi život na jedan drugačiji način, crtajući im nakosi sve što požele. Popularne tetovaže u kosi frizer Ben, kakav je već nadimak zakačio od svojih Pljevljaka, radi povremeno, isključivo na zahtjev mušterije i najčešće besplatno. Kao jedinu prepreku u crtanju u kosi, Ben navodi vrijeme, jer za jednu malu sličicu treba izdvojiti bar pola sata.Ipak, ni to ga ne sprečava da oživi kosu crtajući raznorazne simbole, imena, pa čak i portrete.</string>
    <string name="o_frizeru_benu">O Frizeru Benu</string>
    <string name="todo1">TODO</string>
    <string name="textview">Frizersko-berberska radnja “BEN” počela je sa radom 1998. godine u Pljevljima. Umjetnost je čovjekov izraz uživanja u radu, rekao je svojevremeno Henri Kisindžer, a tu misao potvrđuje i samouki pljevaljski frizer Bensad Bambur koji više od 20 godina u kosu svojih mušterija unosi život na jedan drugačiji način, crtajući im nakosi sve što požele. Popularne tetovaže u kosi frizer Ben, kakav je već nadimak zakačio od svojih Pljevljaka, radi povremeno, isključivo na zahtjev mušterije i najčešće besplatno. Kao jedinu prepreku u crtanju u kosi, Ben navodi vrijeme, jer za jednu malu sličicu treba izdvojiti bar pola sata.Ipak, ni to ga ne sprečava da oživi kosu crtajući raznorazne simbole, imena, pa čak i portrete.</string>
    <string name="todo">TODO</string>
    <string name="instagram">Instagram</string>
    <string name="slikaadmin" />
    <string name="uloguj_se">Uloguj se</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sacuvaj_podatke">Sacuvaj podatke</string>
    <string name="unesite_ime">Unesite ime</string>
    <string name="dobrodosli_bene">Dobrodosli,Bene!</string>
    <string name="slikaben">slikaBen</string>
    <string name="zakazi_termin">Zakazi termin</string>
    <string name="frizer_ben">Frizer Ben(*)</string>
    <string name="o_benu">O Benu</string>
    <string name="unesite_vase_ime">Unesite Vase ime</string>
    <string name="dobrodosli">Dobrodosli!</string>
    <string name="datum_termina">Datum termina</string>
    <string name="zakazi">Zakazi</string>
    <string name="otkazi_berbera">Otkazi termin</string>
    <string name="izaberite_vrijeme_termina">Izaberite vrijeme termina:</string>
    <string name="d_m_g">D-M-G</string>
    <string name="_10_00_10_30">10:00-10:30</string>
    <string name="_10_30_11_00">10:30-11:00</string>
    <string name="_11_00_11_30">11:00-11:30</string>
    <string name="_11_30_12_00">11:30-12:00</string>
    <string name="_12_00_12_30">12:00-12:30</string>
    <string name="_12_30_13_00">12:30-13:00</string>
    <string name="_13_00_13_30">13:00-13:30</string>
    <string name="_13_30_14_00">13:30-14:00</string>
    <string name="_15_00_15_30">15:00-15:30</string>
    <string name="_15_30_16_00">15:30-16:00</string>
    <string name="_16_00_16_30">16:00-16:30</string>
    <string name="_16_30_17_00">16:30-17:00</string>
    <string name="_17_00_17_30">17:00-17:30</string>
    <string name="_17_30_18_00">17:30-18:00</string>
    <string name="_18_00_18_30">18:00-18:30</string>
    <string name="_18_30_19_00">18:30-19:00</string>
</resources>