<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainWindow">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.318">

        <ImageView
            android:id="@+id/logoMain"
            android:layout_width="240dp"
            android:layout_height="214dp"
            android:layout_marginBottom="12dp"
            app:srcCompat="@drawable/logo" />

        <Button
            android:id="@+id/slobodni_termini"
            android:layout_width="197dp"
            android:layout_height="102dp"
            android:text="@string/zakazi_termin"
            app:backgroundTint="#AB0B0808" />

        <Button
            android:id="@+id/admin"
            android:layout_width="197dp"
            android:layout_height="102dp"
            android:text="@string/frizer_ben"
            app:backgroundTint="#AB0B0808" />

        <Button
            android:id="@+id/obenu"
            android:layout_width="197dp"
            android:layout_height="102dp"
            android:text="@string/o_benu"
            app:backgroundTint="#AB0B0808" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/call_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/call"
                android:contentDescription="TODO" />

            <ImageButton
                android:id="@+id/ig_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="TODO"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ig" />

            <ImageButton
                android:id="@+id/web_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/web" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
